--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ install:
   - mkdir .rubies
   - git clone https://github.com/rbenv/ruby-build.git
   - (cd ruby-build && sudo ./install.sh)
-  - ruby-build $rb ~/.rubies/$r
+  - RUBY_CONFIGURE_OPTS=--with-openssl-dir=/usr/local/ssl ruby-build $rb ~/.rubies/$r
   - git clone https://github.com/postmodern/chruby.git
   - (cd chruby && sudo ./scripts/setup.sh)
   - chruby-exec $r -- ruby --version
