--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ install:
   - test "$o" = "none" || git clone https://github.com/openssl/openssl.git
   - test "$o" = "none" || (cd openssl && git checkout OpenSSL_$o)
   - test "$o" = "none" || (cd openssl && ./config -fPIC shared && make depend && make && sudo make install) >/dev/null
-  - test "$o" = "none" || (cd /usr/local/ssl && for i in certs private openssl.cnf; do rm -rf $i; ln -s /etc/ssl/$i; done)
+  - test "$o" = "none" || (cd /usr/local/ssl && for i in certs private openssl.cnf; do sudo rm -rf $i; sudo ln -s /etc/ssl/$i; done)
   - mkdir .rubies
   - git clone https://github.com/rbenv/ruby-build.git
   - (cd ruby-build && sudo ./install.sh)
