--- a/.travis.yml
+++ b/.travis.yml
@@ -13,17 +13,8 @@ install:
   - rb=${TRUBY#ruby-}
   - echo o=$o r=$r rb=$rb v=$v p=$p
   - rvm implode --force
-  - sudo apt-get update >/dev/null
-  - sudo apt-get install -y autoconf bison build-essential curl git sudo >/dev/null
-  - sudo apt-get install -y libyaml-dev libreadline6-dev zlib1g-dev libncurses5-dev libffi-dev libgdbm3 libgdbm-dev >/dev/null
-  - test "$o" = "none" || git clone https://github.com/openssl/openssl.git
-  - test "$o" = "none" || (cd openssl && git checkout OpenSSL_$o)
-  - test "$o" = "none" || (cd openssl && ./config -fPIC shared && make depend && make && sudo make install) >/dev/null
-  - test "$o" = "none" || (cd /usr/local/ssl && for i in certs private openssl.cnf; do sudo rm -rf $i; sudo ln -s /etc/ssl/$i; done)
-  - mkdir .rubies
-  - git clone https://github.com/rbenv/ruby-build.git
-  - (cd ruby-build && sudo ./install.sh)
-  - RUBY_CONFIGURE_OPTS=--with-openssl-dir=/usr/local/ssl ruby-build $rb ~/.rubies/$r
+  - test "$OPENSSL" = "none" || curl https://s3-eu-west-1.amazonaws.com/hetznerza/travis-ci/precise/no-rvm/openssl-${OPENSSL}.tar.gz | sudo tar -C /opt -xzf -
+  - curl https://s3-eu-west-1.amazonaws.com/hetznerza/travis-ci/precise/no-rvm/${TRUBY}.tar.gz | sudo tar -C /opt/rubies -xzf -
   - git clone https://github.com/postmodern/chruby.git
   - (cd chruby && sudo ./scripts/setup.sh)
   - chruby-exec $r -- ruby --version
